--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ background-color:#1a1a1a;
 }
 .container {
 width:65%;max-width:1250px;
-margin-top:2em;
+margin-top:6em;
 margin-left:auto;
 margin-right:auto;
 }
@@ -33,7 +33,7 @@ font-weight:800;
 line-height:1em;
 letter-spacing:0.05em;
 }
-h1 {font-size:9em;}/*4em*/
+h1 {font-size:8em;}/*4em*/
 h2 {font-size:6em;}
 h3 {font-size:6em;}
 h4 {
@@ -153,7 +153,7 @@ list-style-type:none;
 /******************
 Intro**/
 .main {
-padding:130px 0 30px;
+padding:30px 0 30px;
 }
 	.main h1 {
 	margin-bottom:60px;
